Corrected some code

--- a/portfolio/templates/portfolio/includes/footer.html
+++ b/portfolio/templates/portfolio/includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <p class="small mb-0 text-light">
             &copy; {% now "Y" %} Created With <i class="ti-heart text-danger"></i> By 
-            <a href="http://devcrud.com" target="_blank"><span class="text-danger">DevCRUD</span></a> 
+            <a href="/" target="_blank"><span class="text-danger">Chrys</span></a> 
         </p>
     </div>
 </footer>
