--- a/portfolio/templates/portfolio/includes/head.html
+++ b/portfolio/templates/portfolio/includes/head.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{% block meta_description %}JohnDoe Portfolio{% endblock %}">
 <meta name="author" content="Devcrud">
 
-<title>{% block title %}JohnDoe{% endblock %}</title>
+<title>{% block title %}Chris Ogwara{% endblock %}</title>
 
 <link rel="icon" href="{% static 'imgs/favicon.png' %}" type="image/png">
 <link rel="stylesheet" href="{% static 'vendors/themify-icons/css/themify-icons.css' %}">
